# GIMu2.0

./: README.md
.build/Elevador.h/: build.options.json
.build/GIMu.cpp/: GIMu.cpp.elf  GIMu.cpp.hex  GIMu.cpp.with_bootloader.hex  includes.cache
.build/TestesGerais/: TestesGerais.ino.elf  TestesGerais.ino.hex  TestesGerais.ino.with_bootloader.hex  includes.cache
Computer Vision/: Cow.cpp  Cow.h  Makefile  Porteira.cpp  Porteira.h  findVACA  findVACA.cpp  funcGIMu.cpp  improvedGIMu  improvedGIMu.cpp  main  main.cpp  main2  main2.cpp  neuralVaquinha  neuralVaquinha.cpp  output.mov  saveVideoKuh.cpp  teste_retas.cpp  vacaGO  vacaGO.cpp  vaquinhAgo
Computer Vision/ArUco Codes/: Makefile  aruco_simple.cpp  aruco_test.cpp  test  test.cpp  test1  teste
Computer Vision/Haar Cascade/: amostras_positivas.vec  negativas.txt  pos-samples.vec  tentativa1  tentativa1.cpp  teste1  teste2
Control Codes/: Testes.cpp  Testes.h
Control Codes/Drop/: ListaSharp.cpp  ListaSharp.h  SharpSensor.cpp  SharpSensor.h
Control Codes/Libraries/: GIMu.cpp  GIMu.h  Motor.cpp  Motor.h
Control Codes/TestesGerais/: BracoCopo.cpp  BracoCopo.h  Elevador.cpp  Elevador.h  GIMu.cpp  GIMu.h  Pins.cpp  TestesGerais.ino  segueParede.ino  (+1 more)
IEEE_OPEN2017/: scoreSheetLARC2017.odt
Integration Codes/: Cow.cpp  Cow.h  pdKuh  pdKuh.cpp  teste.cpp
SOMcode/: CMakeLists.txt  main.cpp
SOMcode/I2C/: I2C.cpp  I2C.h
SOMcode/I2C(old)/: I2C.cpp  I2C.h
SOMcode/I2C/libi2c/: Pi2c.cpp  pi2c.cpp  pi2c.h
SOMcode/testeSize:30/: output0.csv  output1000.csv  output10000.csv  output11000.csv  output12000.csv  output13000.csv  output14000.csv  output15000.csv  output16000.csv  output17000.csv  output18000.csv  output19000.csv  output2000.csv  output20000.csv  output3000.csv  output4000.csv  output5000.csv  output6000.csv  output7000.csv  output8000.csv  output9000.csv
Simulation Codes/: neuralVaquinha.cpp
(+804 files in other folders)
